cmss/main/default/objects/LogEvent__e/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>