cmss/main/default/objects/LogEvent__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>possible values same as on Log__c object [debug, info, warn, error]</description>
    <label>Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>