cmss/main/default/objects/LogEvent__e/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Transaction UUID</description>
    <label>TransactionId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>